crates/ars-components/src/utility/form/snapshots/ars_components__utility__form__tests__form_root_action_and_role.snap
---
source: crates/ars-components/src/utility/form.rs
assertion_line: 755
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "form",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "idle",
            ),
        ),
        (
            Id,
            String(
                "checkout",
            ),
        ),
        (
            Role,
            String(
                "search",
            ),
        ),
        (
            Action,
            String(
                "#",
            ),
        ),
        (
            NoValidate,
            Bool(
                true,
            ),
        ),
    ],
    styles: [],
}
