crates/ars-components/src/utility/form/snapshots/ars_components__utility__form__tests__form_root_submitting.snap
---
source: crates/ars-components/src/utility/form.rs
assertion_line: 737
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "form",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "submitting",
            ),
        ),
        (
            Aria(
                Busy,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "checkout",
            ),
        ),
        (
            NoValidate,
            Bool(
                true,
            ),
        ),
    ],
    styles: [],
}
