crates/ars-components/src/utility/form/snapshots/ars_components__utility__form__tests__form_status_region_default.snap
---
source: crates/ars-components/src/utility/form.rs
assertion_line: 765
expression: "snapshot_attrs(&service.connect(&|_| {}).status_region_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "status-region",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "form",
            ),
        ),
        (
            Aria(
                Atomic,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "polite",
            ),
        ),
        (
            Role,
            String(
                "status",
            ),
        ),
    ],
    styles: [],
}
